--- a/windows/QMK Toolbox/QMK Toolbox.csproj
+++ b/windows/QMK Toolbox/QMK Toolbox.csproj
@@ -78,6 +78,7 @@
     <EmbeddedResource Include="Resources\qmk_driver_installer.exe" />
     <EmbeddedResource Include="Resources\teensy_loader_cli.exe" />
     <EmbeddedResource Include="Resources\wb32-dfu-updater_cli.exe" />
+    <EmbeddedResource Include="Resources\sonixflasher.exe" />
     <EmbeddedResource Include="Resources\libftdi1.dll" />
     <EmbeddedResource Include="Resources\libhidapi-0.dll" />
     <EmbeddedResource Include="Resources\libusb-0-1-4.dll" />
