[macos] sonixqmk fork
minimal rename

--- a/macos/QMK Toolbox/Info.plist
+++ b/macos/QMK Toolbox/Info.plist
@@ -52,7 +52,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>QMK Toolbox</string>
+	<string>SonixQMK Toolbox</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
