--- a/windows/QMK Toolbox/QMK Toolbox.csproj
+++ b/windows/QMK Toolbox/QMK Toolbox.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <OutputType>WinExe</OutputType>
-    <AssemblyName>qmk_toolbox</AssemblyName>
+    <AssemblyName>sonixqmk_toolbox</AssemblyName>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
@@ -20,12 +20,12 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
     <AssemblyVersion>0.3.3</AssemblyVersion>
     <FileVersion>0.3.3</FileVersion>
-    <Title>QMK Toolbox</Title>
+    <Title>SonixQMK Toolbox</Title>
     <Copyright>Copyright © 2024 QMK</Copyright>
     <Company>QMK</Company>
     <Description>A flashing/debug utility for devices running QMK Firmware</Description>
     <Version>0.3.3</Version>
-    <Product>QMK Toolbox</Product>
+    <Product>SonixQMK Toolbox</Product>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="BetterComboBox.cs">
